web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-declaration-object-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,22)
1|function f({x, y}) { "use strict"; }
 |                    ^
